<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:id="@+id/cvCard" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img"
            android:layout_gravity="center_vertical"
            android:layout_width="50dp"
            android:layout_marginLeft="5dp"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCity"
                android:transitionName="@string/transition_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/tvInfo"
                android:transitionName="@string/transition_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/app_name"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTemp"
            android:transitionName="@string/transition_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="25 °C"/>

        <ImageView
            android:id="@+id/icon"
            android:transitionName="@string/transition_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/d"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>